--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8">
 		<title>Staff Login</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="css/staff.css" />
 	</head>
 	<body>
+		<div id="msg"></div>
 		<table class="table">
 			<tr>
 				<td>Username: </td>
@@ -31,7 +33,8 @@
 				xhr.onreadystatechange = function () {
 					if(xhr.readyState == 4 && xhr.status == 200) {
 						var result = xhr.responseText;
-						console.log('Result: ' + result);
+						//return and display the errors or move on to the next page
+						document.getElementById("msg").innerHTML = result;
 					}
 				}
 				xhr.send(params);
